Add License APIs
